welcome.lessons.welcome.conditions.Conditions.scala.error
Program:1: error: not found: value abscisse
abscisse=getX():Int;
^Program:2: error: not found: value ordonn?e
ordonn?e=getY():Int;
^Program:3: error: not found: value buggle
buggle==(a,b)
^Program:3: error: not found: value a
buggle==(a,b)
         ^Program:3: error: not found: value b
buggle==(a,b)
           ^Program:4: error: not found: value buggle
if (buggle=estFaceMur()) {
    ^Program:6: error: not found: value ordonn?e
  ordonn?e=ordonn?e+1
  ^Program:9: error: not found: value ordonn?e
  ordonn?e=ordonn?e+1
  ^