welcome.lessons.welcome.conditions.Conditions.scala.code
abscisse=getX():Int;
ordonn?e=getY():Int;
buggle==(a,b)
if (buggle=estFaceMur()) {
  recule();
  ordonn?e=ordonn?e+1
} else {
  avance()
  ordonn?e=ordonn?e+1
}